@@ -139,10 +139,13 @@ module GMake (L : GLexerType) : S with type te = L.te;;
 
 (** {6 Miscellaneous} *)
 
-exception SkipItem;;
-   (** Can be raised in semantic actions to skip an item in a list.
-       To be used in entries called by the meta-symbols LIST0 and
-       LIST1. Allow conditional parsing. *)
+val skip_item : 'a -> 'a;;
+   (** [Grammar.skip_item x] can be called in a semantic action of
+       a grammar rule to ask the grammar to skip that item if it
+       is called in a list (LIST0 or LIST1). The function returns
+       the item itself (for typing reasons) but its value is ignored.
+       This function is used to allow IFDEF and IFNDEF for cases of
+       constructor declarations and pattern matchings. *)
 
 val error_verbose : bool ref;;
    (** Flag for displaying more information in case of parsing error;
@@ -156,8 +159,9 @@ val strict_parsing : bool ref;;
        default = [False] *)
 
 val functional_parse : bool ref;;
-   (** Parse with functional parsers, with limited backtrack;
-       default = [False] *)
+   (** Internally parse with functional parsers, with limited backtrack;
+       its default is [False] except if the environment variable FPARSE
+       exists and set to "t" *)
 
 val print_entry : Format.formatter -> 'te Gramext.g_entry -> unit;;
    (** General printer for all kinds of entries (obj entries) *)
